collapse icon ui fix in header file

--- a/agile-frontend/WebContent/flatfull/css/core/migration.css
+++ b/agile-frontend/WebContent/flatfull/css/core/migration.css
@@ -2242,5 +2242,4 @@ color:#484848!important;
   
 }
 
-#nav-collapse-icon{ position: absolute; top: 0; left: 10px;}
 
